kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retro-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: retro-webapp
  template:
    metadata:
      labels:
        app: retro-webapp
    serviceAccountName: retro-webapp
    spec:
      containers:
        - name: web
          image: quay.io/rguske/retroplay-welcome:v1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
