kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retro-webapp
spec:
  selector:
    app: retro-webapp
  ports:
    - name: http
      port: 80
      targetPort: 8080
