kubernetes/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: retroplay-route
spec:
  path: /
  to:
    kind: Service
    name: retro-webapp
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
